# ReVoCall-Engagement

./: .gitignore  .markdownlint.yaml  .sqlfluff  .yamllint.yml  Cargo.toml  README.md  buf.gen.yaml  docker-compose.yml  justfile  package-lock.json  package.json
.github/workflows/: ci-code-quality.yml  ci.yml
clients/go/engagementhub/: errors.go  errors_test.go  go.mod
clients/go/engagementhub/shared/idempotency/: request_id.go  request_id_test.go
crates/engagement-hub/: Cargo.toml
crates/engagement-hub-adapters/: Cargo.toml  build.rs
crates/engagement-hub-adapters/src/: analytics_http.rs  journey_manager_grpc.rs  lib.rs  metrics.rs  policies.rs  post_call_http.rs  registry_grpc.rs  registry_stub.rs  saga.rs  voice_manager_grpc.rs  voice_manager_http.rs
crates/engagement-hub-adapters/tests/: adapter_scaffolding.rs
crates/engagement-hub-domain/: Cargo.toml
crates/engagement-hub-domain/src/: lib.rs
crates/engagement-hub-ports/: Cargo.toml
crates/engagement-hub-ports/src/: error.rs  lib.rs  ports.rs  types.rs
crates/engagement-hub-ports/src/fake/: analytics.rs  journey_manager.rs  mod.rs  post_call.rs  registry.rs  voice_manager.rs
crates/engagement-hub/examples/: test_otlp.rs
crates/engagement-hub/src/: audit.rs  config.rs  db.rs  idempotency.rs  lib.rs  main.rs  metrics.rs  notify.rs  shutdown.rs
crates/engagement-hub/src/server/: grpc.rs  http.rs  mod.rs
crates/engagement-hub/src/telemetry/: local_exporter.rs  mod.rs  otlp_json.rs  processor.rs
crates/engagement-hub/tests/: advisory_lock.rs  audit_writer.rs  config_validation.rs  grpc_health.rs  http_server.rs  idempotency.rs  listen_notify.rs  startup.rs  trace_query.rs
crates/engagement-hub/tests/fixtures/: sample.jsonl
docs/rust-mirror/: idempotency.md
docs/stories/: T1-01-service-skeleton-and-config-validation.md  T1-02-port-traits-and-fake-adapters.md  T1-03-read-adapters-registry-postcall-analytics.md  T1-04-write-adapters-voice-manager-journey-manager.md  T1-05-persistence-audit-first-two-phase-and-idempotency.md  T1-05-persistence-primitives.md  T1-09-listen-notify-fanout-and-gap-recovery.md  T2-01-external-v1-proto.md  T2-02-internal-v1-proto-errors.md  T2-03-connect-go-stubs-sdk-skeleton.md  T2-05-typed-error-sentinels.md  T2-10-shared-uuidv5-idempotency.md  T3-01-otel-exporters-three-toggle.md  T3-02-eh-metric-set-instrumentation.md
docs/superpowers/plans/: 2026-05-15-connect-go-stubs-sdk-skeleton.md
docs/superpowers/specs/: 2026-05-15-t1-01-service-skeleton-design.md
migrations/: 20260515000000_initial_schema.down.sql  20260515000000_initial_schema.up.sql
proto/registry/v1/: registry.proto
proto/revocall/engagement/internal/v1/: service.proto
proto/revocall/engagement/v1/: control.proto  engagement.proto  errors.proto  placeholder.proto  proxied.proto  query.proto  service.proto  watch.proto
proto/revocall/journey/v1/: journey_manager.proto
proto/revocall/voice/v1/: voice_manager.proto
revolab-observability/tools/: trace-query
