[workspace]
resolver = "2"
members = [
    "crates/engagement-hub",
    "crates/engagement-hub-domain",
    "crates/engagement-hub-ports",
    "crates/engagement-hub-adapters",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Proprietary"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
axum = "0.7"
prometheus = "0.13"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "http-proto"] }
tracing-opentelemetry = "0.27"
opentelemetry-semantic-conventions = "0.27"
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3"

# Dev-only
assert_cmd = "2"
predicates = "3"
scopeguard = "1"
