[package]
name = "engagement-hub-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
engagement-hub-ports = { path = "../engagement-hub-ports" }

[lib]
path = "src/lib.rs"
