[package]
name = "engagement-hub-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[features]
registry-stub = []

[dependencies]
async-trait   = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true, features = ["json"] }
serde         = { workspace = true }
tonic         = { workspace = true }
prost         = { workspace = true }
futures       = { workspace = true }
prometheus    = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
rand          = { workspace = true }
uuid          = { workspace = true }
serde_json    = { workspace = true }
engagement-hub-ports = { path = "../engagement-hub-ports" }
urlencoding = "2.1.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio        = { workspace = true }
wiremock     = { workspace = true }
tokio-stream = { workspace = true }
uuid         = { workspace = true }
serde_json   = { workspace = true }

[lib]
path = "src/lib.rs"
