[package]
name = "engagement-hub"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "engagement-hub"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
tonic-health.workspace = true
prost.workspace = true
sqlx.workspace = true
axum.workspace = true
prometheus.workspace = true
clap.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-semantic-conventions.workspace = true
chrono.workspace = true
sha2.workspace = true

[dev-dependencies]
reqwest.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
scopeguard.workspace = true
futures.workspace = true
